5 July 2016: Wouter
	- Fix dynamic link of anchor-update.exe on windows.
	- Fix detect of mingw for MXE package build.
	- Fixes for 64bit windows compile.

4 July 2016: Wouter
	- For #787: prefer-ip6 option for unbound.conf prefers to send
	  upstream queries to ipv6 servers.
	- Fix #787: outgoing-interface netblock/64 ipv6 option to use linux
	  freebind to use 64bits of entropy for every query with random local
	  part.

30 June 2016: Wouter
	- Document always_transparent, always_refuse, always_nxdomain types.

29 June 2016: Wouter
	- Fix static compile on windows missing gdi32.

28 June 2016: Wouter
	- Create a pkg-config file for libunbound in contrib.

27 June 2016: Wouter
	- Fix #784: Build configure assumess that having getpwnam means there
	  is endpwent function available.
	- Updated repository with newer flex and bison output.

24 June 2016: Ralph
	- Possibility to specify local-zone type for an acl/tag pair
	- Possibility to specify (override) local-zone type for a source address
	  block
16 June 2016: Ralph
	- Decrease dp attempts at each QNAME minimisation iteration

16 June 2016: Wouter
	- Fix tcp timeouts in tv.usec.

15 June 2016: Wouter
	- TCP_TIMEOUT is specified in milliseconds.
	- If more than half of tcp connections are in use, a shorter timeout
	  is used (200 msec, vs 2 minutes) to pressure tcp for new connects.

14 June 2016: Ralph
	- QNAME minimisation unit test for dropped QTYPE=A queries.

14 June 2016: Wouter
	- Fix 775: unbound-host and unbound-anchor crash on windows, ignore
	  null delete for wsaevent.
	- Fix spelling in freebind option man page text.
	- Fix windows link of ssl with crypt32.
	- Fix 779: Union casting is non-portable.
	- Fix 780: MAP_ANON not defined in HP-UX 11.31.
	- Fix 781: prealloc() is an HP-UX system library call.

13 June 2016: Ralph
	- Use QTYPE=A for QNAME minimisation.
	- Keep track of number of time-outs when performing QNAME minimisation.