@@ -2,6 +2,8 @@
 	- Fix dynamic link of anchor-update.exe on windows.
 	- Fix detect of mingw for MXE package build.
 	- Fixes for 64bit windows compile.
+	- Fix #788 for nettle 3.0: Failed to build with Nettle >= 3.0 and
+	  --with-libunbound-only --with-nettle.
 
 4 July 2016: Wouter
 	- For #787: prefer-ip6 option for unbound.conf prefers to send
